--- a/MotivateMe/MotivateMe/AddPage.xaml
+++ b/MotivateMe/MotivateMe/AddPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              x:Class="MotivateMe.AddPage"
              Title="Add Activity"
              Icon="add.png">
@@ -9,7 +10,8 @@
                      Padding="10,10,10,0"
                 HorizontalOptions="FillAndExpand">
             <Label Text="Add Workout" />
-            <Picker Title="Activity Type" SelectedIndex="0" HorizontalOptions="FillAndExpand">
+            <Entry Text="{Binding Name}" Placeholder="Name"/>
+            <Picker Title="Activity Type" SelectedItem="{Binding Type}"  HorizontalOptions="FillAndExpand">
                 <Picker.Items>
                     <x:String>Run</x:String>
                     <x:String>Bike</x:String>
@@ -18,10 +20,11 @@
                     <x:String>Walk</x:String>
                 </Picker.Items>
             </Picker>
-            <Label Text="Distance" />
-            <Entry Keyboard="Numeric" x:Name="distance" />
-            <Label Text="Calories" />
-            <Entry Keyboard="Numeric" x:Name="calories" />
+            <Entry Keyboard="Numeric" x:Name="distance" Text="{Binding MetricOne}" Placeholder="Distance"/>
+            <Entry Keyboard="Numeric" x:Name="calories" Text="{Binding MetricTwo}" Placeholder="Calories"/>
+            <DatePicker Date="{Binding Timestamp}"/>
+            <TimePicker Time="{Binding Time}" />
+            <Button Text="Add Entry" Clicked="Button_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
