--- a/MotivateMe/MotivateMe/App.xaml
+++ b/MotivateMe/MotivateMe/App.xaml
@@ -3,6 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MotivateMe.App">
     <Application.Resources>
+        <ResourceDictionary>
 
+            <!-- Colors -->
+            <Color x:Key="ErrorColor">#ff5252</Color>
+
+            <!-- EXPLICIT STYLES -->
+            <Style x:Key="ValidationErrorLabelStyle"
+                   TargetType="{x:Type Label}">
+                <Setter Property="TextColor"
+                           Value="{StaticResource ErrorColor}" />
+                <Setter Property="FontSize"
+                           Value="12" />
+            </Style>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
